--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -35,7 +34,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido por Guilherme Martins</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
 </body>
 </html>
