--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido por Guilherme Martins</p>
     </footer>
 </body>
 </html>
