--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <main>
 <section id="container"> 
-<article class="cartao">
+    <article class="cartao">
     <div class="cartao__conteudo">
         <h3>Programação</h3>
         <div class="cartao__conteudo__pergunta"</div>
@@ -16,6 +16,16 @@
     </div>
     <div class="cartao__conteudo__resposta">
         O JavaScript é uma linguagem de programação
+    </div>
+</article>
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3>Programação</h3>
+        <div class="cartao__conteudo__pergunta"</div>
+            O que é CSS?
+    </div>
+    <div class="cartao__conteudo__resposta">
+        O CSS é uma linguagem de estilização
     </div>
 </article>
 </section>
