--- a/index.html
+++ b/index.html
@@ -4,35 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>FLASHCARD</title>
+    <title>Flashcard</title>
 </head>
 <body>
-  <main>
-<section id="container"> 
-    <article class="cartao">
-    <div class="cartao__conteudo">
-        <h3>Programação</h3>
-        <div class="cartao__conteudo__pergunta"</div>
-            O que é JavaScript?
-    </div>
-    <div class="cartao__conteudo__resposta">
-        O JavaScript é uma linguagem de programação
-    </div>
-</article>
-<article class="cartao">
-    <div class="cartao__conteudo">
-        <h3>Programação</h3>
-        <div class="cartao__conteudo__pergunta"</div>
-            O que é CSS?
-    </div>
-    <div class="cartao__conteudo__resposta">
-        O CSS é uma linguagem de estilização
-    </div>
-</article>
-</section>
-  </main>  
-  <footer> 
-<p>Projeto desenvolvido por Guilherme Martins</p>
-</footer>
+    <main>
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é JavaScript?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O JavaScript é uma linguagem de programação
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é CSS?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O CSS é uma linguagem de estilização
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
 </body>
 </html>
